# hforth

./: .README.md.swp  CHANGELOG.md  README.md  TODO.md  hforth.cabal  run.sh
app/: Main.hs  buzzard.hs  h-forth.hs  hsc3-forth.hs  rat-forth.hs
benchmark/: Main.hs
fs/: .preForth-i386-backend.pre.swp  preForth-rts.pre  preForth.pre  ratlib.fs  stdlib.fs  tutorial.fs
fs/buzzard/: demo1.1st  demo1.th  demo3.th  demo4.th  demo5.th  third
src/: .HForth.hs.swp  .Rational.hs.swp  HForth.hs  Rational.hs  Words.hs
src/Language/: HForth.hs
src/Language/HForth/: Compile.hs  Compiler.hs  Dictionaries.hs  Expr.hs  Interpret.hs  List.hs  Locals.hs  Operation.hs  Stack.hs  Strings.hs  VM.hs  Words.hs
test/: Spec.hs
