cabal-version:   2.4
name:            hforth
version:         0.0.0.0
synopsis:        See README for more info
description:
  See README for more info.
  See [README.md](https://github.com/jrp2014/hforth#hforth) for more details.

homepage:        https://github.com/jrp2014/hforth
bug-reports:     https://github.com/jrp2014/hforth/issues
license:         MIT
license-file:    LICENSE
author:          (c) Rohan Drape, 2014-2021, jrp2014
maintainer:
  rd@rohandrape.net, jrp2014 <jrp2014@users.noreply.github.com>

copyright:       2014-2021 Rohan Drape, 2021 jrp2014
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md
  README.orig

data-files:      fs/*.fs
tested-with:     GHC ==8.10.4

source-repository head
  type:     git
  location: https://github.com/jrp2014/hforth.git

common common-options
  build-depends:    base ^>=4.14.1.0
  ghc-options:
    -Wall -Wextra -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language: Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    HForth
    Rational

  build-depends:
    , containers
    , directory
    , hashable
    , mtl
    , safe
    , unix

executable h-forth
  import:         common-options
  hs-source-dirs: app
  main-is:        h-forth.hs
  build-depends:
    , containers
    , hforth
    , optparse-applicative
    , filepath
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable rat-forth
  import:         common-options
  hs-source-dirs: app
  main-is:        rat-forth.hs
  build-depends:
    , containers
    , hforth
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite hforth-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:  hforth
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark hforth-benchmark
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Main.hs
  build-depends:  hforth
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
